--- a/src/assets/toolkit/styles/toolkit.css
+++ b/src/assets/toolkit/styles/toolkit.css
@@ -4,23 +4,6 @@
 
 @import "suitcss-base";
 @import "suitcss-components-button";
-
-:root {
-  /* Add custom properties here. */
-}
-
-@custom-media --sm-viewport (min-width:320px) and (max-width:640px);
-@custom-media --md-viewport (min-width:640px) and (max-width:960px);
-@custom-media --lg-viewport (min-width:960px);
+@import "./base/index.css";
 
 /* Import more stuff here. */
-
-html {
-  line-height: 1.4;
-}
-
-@media (--lg-viewport) {
-  body {
-    font-size: 1.2em;
-  }
-}
