Tweak placeholder page titles

--- a/src/pages/demos/demo-example-1.hbs
+++ b/src/pages/demos/demo-example-1.hbs
@@ -1,7 +1,9 @@
 ---
-title: Example Demo 1
+title: Navigation A
 notes: This is an example demo.
 layout: blank
+styles:
+  - demo-1
 ---
 
 <h1>{{title}}</h1>
