--- a/src/pages/demos/demo-example-2.hbs
+++ b/src/pages/demos/demo-example-2.hbs
@@ -1,7 +1,9 @@
 ---
-title: Example Demo 2
+title: Navigation B
 notes: This is an example demo.
 layout: blank
+styles:
+  - demo-2
 ---
 
 <h1>{{title}}</h1>
