--- a/src/patterns/typography/paragraphs.hbs
+++ b/src/patterns/typography/paragraphs.hbs
@@ -1,9 +1,13 @@
 ---
 name: Paragraph Elements
+sourceless: true
 notes: |
   These are some paragraph elements.
 labels:
   - inprogress
 ---
 
-<p>This is what a paragraph looks like.</p>
+{{!-- TODO: maybe a helper or something to shorten this path? --}}
+<p>
+  {{drizzle.data.specimens.contents.paragraph}}
+</p>
