Tweak a few more styles to Drizzle UI

--- a/src/assets/drizzle/styles/components/layout.css
+++ b/src/assets/drizzle/styles/components/layout.css
@@ -32,5 +32,6 @@
   .Layout-main {
     margin-left: var(--Layout-nav-width);
     max-width: 50rem;
+    padding-left: calc(var(--space) * 3);
   }
 }
