More fluid Layout main padding, 💣 max-width
I'm usually a big proponent of limiting line lengths, but I feel strongly that the style guide pages should not have a capped width. This makes it more difficult to test some responsive elements.

--- a/src/assets/drizzle/styles/components/layout.css
+++ b/src/assets/drizzle/styles/components/layout.css
@@ -31,7 +31,6 @@
 
   .Layout-main {
     margin-left: var(--Layout-nav-width);
-    max-width: 50rem;
-    padding-left: calc(var(--space) * 3);
+    padding: 2.5vh 5%;
   }
 }
