Simplify some patterns, make hierarchy consistent

--- a/src/templates/collection.hbs
+++ b/src/templates/collection.hbs
@@ -1,6 +1,6 @@
 {{#extend "default"}}
   {{#content "body"}}
-    <h2 class="drizzle-u-marginTop">{{name}}</h2>
+    <h1>{{name}}</h1>
     {{#each patterns}}
       {{> drizzle.item}}
     {{/each}}
