--- a/src/templates/blank.hbs
+++ b/src/templates/blank.hbs
@@ -4,7 +4,13 @@
     {{#block "head"}}
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>{{title}}</title>
+      {{#if title}}
+        <title>{{title}} - Drizzle</title>
+      {{else if name}}
+        <title>{{name}} - Drizzle</title>
+      {{else}}
+        <title>Drizzle</title>
+      {{/if}}
       {{#each styles}}
         <link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/{{this}}.css">
       {{/each}}
