Add padding to code samples

--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -51,7 +51,7 @@
     </div>
     {{!-- Code sample --}}
     {{#unless data.sourceless}}
-      <pre class="drizzle-u-borderTop"><code class="language-markup">{{{patternSource id @root}}}</code></pre>
+      <pre class="drizzle-u-borderTop drizzle-u-pad"><code class="language-markup">{{{patternSource id @root}}}</code></pre>
     {{/unless}}
   </div>
 </div>
