Add IDs to pattern headers

--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -1,7 +1,7 @@
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    <h2 class="
+    <h2 id="{{toSlug data.name}}" class="
      drizzle-u-inlineBlock
      drizzle-u-alignMiddle
      drizzle-u-textNoWrap
