Redesign and simplify nav
See: #9 #12

--- a/src/assets/drizzle/styles/components/nav.css
+++ b/src/assets/drizzle/styles/components/nav.css
@@ -1,103 +1,84 @@
 :root {
-  --Nav-background: var(--color-white);
-  --Nav-border: 2px solid var(--color-silver);
-  --Nav-active-color: inherit;
-  --Nav-active-border: var(--color-blue);
+  --Nav-background: var(--color-silver);
+  --Nav-active-background: var(--color-white);
+  --Nav-header-background: var(--color-blue);
+  --Nav-header-color: var(--color-white);
+  --Nav-toggle-size: 3em;
+  --Nav-item-padding: calc(var(--space) * 0.75) var(--space);
+  --Nav-item-nested-indent: calc(var(--space) * 2);
+  --Nav-item-nested-font-size: 0.75em;
 }
 
 .Nav {
   background: var(--Nav-background);
-  border: var(--Nav-border);
-  border-width: 0 0 2px;
+}
+
+.Nav-header {
+  background: var(--Nav-header-background);
+  color: var(--Nav-header-color);
+  padding: calc(var(--space) * 0.75) var(--space);
+  position: relative;
+}
+
+.Nav-header-toggle {
+  position: absolute;
+  width: var(--Nav-toggle-size);
+  top: 0;
+  right: 0;
+  bottom: 0;
 
   @media (--lg-viewport) {
-    border-width: 0 2px 0;
+    display: none;
+  }
+
+  & > svg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
   }
 }
 
 .Nav a,
 .Nav a:--enter {
   text-decoration: none;
-}
 
-.Nav-header {
-  padding: 1rem;
-  position: relative;
-}
-
-.Nav-header-logo {
-  font-weight: bold;
-
-  & > img {
-    vertical-align: bottom;
-  }
-}
-
-.Nav-header-toggle {
-  background: transparent;
-  border: 0;
-  box-shadow: none;
-  cursor: pointer;
-  font: inherit;
-  margin: -1.5em 0 0;
-  padding: 1em;
-  position: absolute;
-  top: 50%;
-  right: 0;
-
-  @media (--lg-viewport) {
-    display: none;
-  }
-
-  & svg {
-    display: block;
-    fill: currentColor;
-    height: 1em;
-    opacity: 0.5;
-    width: 1em;
-  }
-
-  @nest .Nav.is-active & {
-    transform: rotate(180deg);
+  &:not(.is-active) {
+    color: inherit;
   }
 }
 
 .Nav-main {
   display: none;
+  padding-bottom: var(--space);
 
   @media (--lg-viewport) {
     display: block;
   }
+}
 
-  @nest .Nav.is-active & {
-    display: block;
-  }
+.Nav.is-active .Nav-main {
+  display: block;
 }
 
 .Nav-menu {
-  margin: 0 0 1rem;
+  margin: 0;
   padding: 0;
   list-style: none;
-
-  & .Nav-menu {
-    margin-bottom: 0;
-  }
 }
 
 .Nav-item {
-  border-color: transparent;
-  border-style: solid;
-  border-width: 0 0 0 0.25rem;
   display: block;
-  padding: 0.5rem 1rem 0.5rem 0.75rem;
-
-  @nest .Nav-menu .Nav-menu & {
-    font-size: 0.875em;
-    padding-left: 1.875rem;
-  }
+  padding: var(--Nav-item-padding);
 
   &.is-active {
-    border-color: var(--Nav-active-border);
-    color: var(--Nav-active-color);
+    background: var(--Nav-active-background);
   }
+}
+
+.Nav-menu .Nav-menu .Nav-item {
+  font-size: var(--Nav-item-nested-font-size);
+  padding-left: var(--Nav-item-nested-indent);
 }
