--- a/src/templates/drizzle/nav.hbs
+++ b/src/templates/drizzle/nav.hbs
@@ -1,11 +1,11 @@
 <div class="drizzle-Layout-nav drizzle-Nav" id="nav">
   <div class="drizzle-Nav-header">
-    <a class="drizzle-Nav-header-logo" href="/">
+    <a href="/">
       {{> drizzle.logo}}
     </a>
     <a class="drizzle-Nav-header-toggle" href="#nav">
-      <svg viewBox="0 0 9.71 5.56">
-        <polygon points="4.85 5.56 0 0.71 0.71 0 4.85 4.15 9 0 9.71 0.71 4.85 5.56"/>
+      <svg viewBox="-1 -1 12 7" width="16" height="16">
+        <polyline fill="none" stroke="currentColor" stroke-width="2" points="0 0 5 5 10 0"/>
       </svg>
     </a>
   </div>
@@ -52,7 +52,7 @@
       {{#each drizzle.pages}}
         {{#if contents}}
           <li>
-            <a class="drizzle-Nav-item drizzle-Nav-item--heading" href="/{{@key}}.html">
+            <a class="drizzle-Nav-item" href="/{{@key}}.html">
               {{data.title}}
             </a>
           </li>
@@ -61,7 +61,7 @@
       {{!-- Patterns --}}
       {{#each drizzle.patterns}}
         <li>
-          <a class="drizzle-Nav-item drizzle-Nav-item--heading" href="/patterns/{{@key}}.html">
+          <a class="drizzle-Nav-item" href="/patterns/{{@key}}.html">
             {{collection.name}}
           </a>
         </li>
@@ -69,7 +69,7 @@
       {{!-- Demo pages --}}
       {{#with drizzle.pages.demos}}
         <li>
-          <a class="drizzle-Nav-item drizzle-Nav-item--heading" href="/demos/index.html">
+          <a class="drizzle-Nav-item" href="/demos/index.html">
             {{index.data.title}}
           </a>
           <ul class="drizzle-Nav-menu">
@@ -88,7 +88,7 @@
       {{!-- Docs pages --}}
       {{#with drizzle.pages.docs}}
         <li>
-          <a class="drizzle-Nav-item drizzle-Nav-item--heading" href="/docs/index.html">
+          <a class="drizzle-Nav-item" href="/docs/index.html">
             {{index.data.title}}
           </a>
           <ul class="drizzle-Nav-menu">
