--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -1,13 +1,16 @@
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    <h2 id="{{toSlug data.name}}" class="
-     drizzle-u-inlineBlock
-     drizzle-u-alignMiddle
-     drizzle-u-textNoWrap
-     drizzle-u-padRight">
-      {{data.name}}
-    </h2>
+    <a href="#{{toSlug data.name}}"
+      class="drizzle-u-inlineBlock drizzle-u-hiddenLink">
+      <h2 id="{{toSlug data.name}}" class="
+       drizzle-u-inlineBlock
+       drizzle-u-alignMiddle
+       drizzle-u-textNoWrap
+       drizzle-u-padRight">
+        {{data.name}}
+      </h2>
+    </a>
     {{#if data.labels}}
       <ul class="
        drizzle-u-inlineBlock
