--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -7,7 +7,7 @@
      drizzle-u-textNoWrap
      drizzle-u-padRight">
      <a href="#{{toSlug data.name}}"
-       class="drizzle-u-hiddenLink">
+       class="drizzle-u-linkHidden">
        {{data.name}}
      </a>
     </h2>
