--- a/src/assets/drizzle/styles/utils/link.css
+++ b/src/assets/drizzle/styles/utils/link.css
@@ -1,4 +1,4 @@
-.u-hiddenLink:not(:hover, :focus, :active) {
+.u-linkHidden:not(:hover, :focus, :active) {
   color: inherit !important;
   text-decoration: none !important;
 }
