--- a/src/pages/demos/demo-example-1.hbs
+++ b/src/pages/demos/demo-example-1.hbs
@@ -2,6 +2,9 @@
 title: Navigation A
 notes: This is an example demo.
 layout: blank
+labels:
+  - inprogress
+  - prototype
 styles:
   - demo-1
 ---
