--- a/src/pages/demos/index.hbs
+++ b/src/pages/demos/index.hbs
@@ -2,12 +2,12 @@
 title: Demos
 ---
 
+<h1>Demos</h1>
+
 <p>These are some demos.</p>
 
-<ul>
-  {{#each drizzle.pages.demos}}
-    {{#compare @key "!==" "index"}}
-      <li><a href="./{{@key}}.html">{{data.title}}</a></li>
-    {{/compare}}
-  {{/each}}
-</ul>
+{{#each drizzle.pages.demos}}
+  {{#compare @key "!==" "index"}}
+    {{> drizzle.page-item }}
+  {{/compare}}
+{{/each}}
