Support previewClass in pattern frontmatter
Allows classes to be appended to container of pattern preview area.

See: #24

--- a/src/patterns/typography/headings.hbs
+++ b/src/patterns/typography/headings.hbs
@@ -6,6 +6,7 @@ links:
   MDN: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements
 labels:
   - inprogress
+previewClass: drizzle-u-rhythm
 ---
 
 {{#with drizzle.data.specimens.contents}}
