--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -49,7 +49,7 @@
   {{/if}}
   {{!-- Preview --}}
   <div class="drizzle-u-border">
-    <div class="drizzle-u-pad drizzle-u-cf drizzle-u-posRelative">
+    <div class="drizzle-u-pad drizzle-u-cf drizzle-u-posRelative {{data.previewClass}}">
       {{{pattern id @root}}}
     </div>
     {{!-- Code sample --}}
