--- a/src/patterns/typography/lists.hbs
+++ b/src/patterns/typography/lists.hbs
@@ -7,6 +7,7 @@ links:
   "MDN <ol>": https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ol
 labels:
   - inprogress
+previewClass: drizzle-u-rhythm
 ---
 
 <ol>
