--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -2,26 +2,16 @@
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
     <h2 id="{{toSlug data.name}}" class="
-     drizzle-u-inlineBlock
-     drizzle-u-alignMiddle
-     drizzle-u-textNoWrap
-     drizzle-u-padRight">
-     <a href="#{{toSlug data.name}}"
-       class="drizzle-u-linkHidden">
-       {{data.name}}
-     </a>
+      drizzle-u-inlineBlock
+      drizzle-u-alignMiddle
+      drizzle-u-textNoWrap
+      drizzle-u-padRight">
+      <a href="#{{toSlug data.name}}"
+        class="drizzle-u-linkHidden">
+        {{data.name}}
+      </a>
     </h2>
-    {{#if data.labels}}
-      <ul class="
-       drizzle-u-inlineBlock
-       drizzle-u-alignMiddle">
-        {{#each data.labels}}
-          <li class="drizzle-Label drizzle-Label--{{this}}">
-            {{this}}
-          </li>
-        {{/each}}
-      </ul>
-    {{/if}}
+    {{> drizzle.labels}}
   </div>
   {{!-- Notes --}}
   {{#if data.notes}}
