--- a/src/templates/drizzle/page-item.hbs
+++ b/src/templates/drizzle/page-item.hbs
@@ -14,7 +14,9 @@
          drizzle-u-padRight">
           <a href="./{{@key}}.html">{{data.title}}</a>
         </h4>
-        {{> drizzle.labels}}
+        {{#if data.labels}}
+          {{> drizzle.labels labels=data.labels}}
+        {{/if}}
       </div>
       {{#if data.notes}}
         <div class="drizzle-Item-notes drizzle-u-rhythm">
