--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -1,19 +1,7 @@
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    <h2 id="{{toSlug data.name}}" class="
-      drizzle-u-inlineBlock
-      drizzle-u-alignMiddle
-      drizzle-u-textNoWrap
-      drizzle-u-padRight">
-      <a href="#{{toSlug data.name}}"
-        class="drizzle-u-linkHidden">
-        {{data.name}}
-      </a>
-    </h2>
-    {{#if data.labels}}
-      {{> drizzle.labels labels=data.labels}}
-    {{/if}}
+    {{> drizzle.labelheader-anchorid name=data.name labels=data.labels}}
   </div>
   {{!-- Notes --}}
   {{#if data.notes}}
