Use partial-block correctly

--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -1,7 +1,7 @@
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    {{#> drizzle.labelheader tag="h2" title=data.title id=(toSlug data.title) labels=data.labels}}
+    {{#> drizzle.labelheader tag="h2" id=(toSlug data.title) labels=data.labels}}
       {{data.title}}
     {{/drizzle.labelheader}}
   </div>
