--- a/src/templates/drizzle/page-item.hbs
+++ b/src/templates/drizzle/page-item.hbs
@@ -7,7 +7,7 @@
     </div>
     <div class="drizzle-Grid-cell drizzle-u-md-size2of3">
       <div class="drizzle-u-marginEnds">
-        {{#> drizzle.labelheader tag="h4" title=data.title key=@key labels=data.labels}}
+        {{#> drizzle.labelheader tag="h4" key=@key labels=data.labels}}
           {{data.title}}
         {{/drizzle.labelheader}}
       </div>
