Reset key to name

--- a/src/templates/drizzle/item.hbs
+++ b/src/templates/drizzle/item.hbs
@@ -1,8 +1,8 @@
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    {{#> drizzle.labelheader tag="h2" id=(toSlug data.title) labels=data.labels}}
-      {{data.title}}
+    {{#> drizzle.labelheader tag="h2" id=(toSlug data.name) labels=data.labels}}
+      {{data.name}}
     {{/drizzle.labelheader}}
   </div>
   {{!-- Notes --}}
