Simplify swatch in favor of utilities
Per feedback on #45

--- a/src/assets/drizzle/styles/utils/list.css
+++ b/src/assets/drizzle/styles/utils/list.css
@@ -1,9 +1,13 @@
+.u-listUnstyled,
+.u-listInline {
+  padding-left: 0;
+  list-style: none;
+}
+
 .u-listInline {
   position: relative;
   margin-right: -0.5em;
   margin-left: -0.5em;
-  padding-left: 0;
-  list-style: none;
 }
 
 .u-listInline > li {
