--- a/src/assets/drizzle/styles/components/swatch.css
+++ b/src/assets/drizzle/styles/components/swatch.css
@@ -1,38 +1,19 @@
 :root {
-  --Swatch-sample-stroke: rgba(0, 0, 0, 0.1);
-  --Swatch-sample-stroke-width: 2px;
-  --Swatch-sample-width: 10em;
-  --Swatch-sample-height: calc(var(--Swatch-sample-width) * (9 / 16)); /* 16:9 */
-  --Swatch-info-padding: calc(var(--space) / 4);
-}
-
-.Swatch {
-  margin: 0;
-  display: inline-block;
-}
-
-.Swatch > * {
-  margin: 0;
+  --Swatch-width: 10em;
+  --Swatch-height: calc(var(--Swatch-width) * (9 / 16)); /* 16:9 */
+  --Swatch-stroke: rgba(0, 0, 0, 0.1);
+  --Swatch-stroke-width: 2px;
 }
 
 /**
- * 1. Double the intended stroke-width because only the inner half will be
+ * 1. Improves swatch visibility on low-contrast background colors.
+ * 2. Double the intended stroke-width because only the inner half will be
  *    within the visible viewBox.
  */
 
-.Swatch-sample {
-  display: block;
-  width: var(--Swatch-sample-width);
-  height: var(--Swatch-sample-height);
-  stroke: var(--Swatch-sample-stroke);
-  stroke-width: calc(var(--Swatch-sample-stroke-width) * 2); /* 1 */
-}
-
-.Swatch-info {
-  padding: var(--Swatch-info-padding);
-}
-
-.Swatch-info > * {
-  margin: 0;
-  white-space: nowrap;
+.Swatch {
+  width: var(--Swatch-width);
+  height: var(--Swatch-height);
+  stroke: var(--Swatch-stroke); /* 1 */
+  stroke-width: calc(var(--Swatch-stroke-width) * 2); /* 2 */
 }
