--- a/src/templates/drizzle/swatch.hbs
+++ b/src/templates/drizzle/swatch.hbs
@@ -1,14 +1,12 @@
-<figure class="drizzle-Swatch">
-  <svg class="drizzle-Swatch-sample">
+<figure class="drizzle-u-noMarginLeft">
+  <svg class="drizzle-Swatch">
     <rect fill="{{color}}" width="100%" height="100%"/>
   </svg>
-  <figcaption class="drizzle-Swatch-info">
-    {{#if label}}
-      <p>{{label}}</p>
-    {{/if}}
-    <p><code>{{color}}</code></p>
-    {{#if property}}
-      <p><code>{{property}}</code></p>
-    {{/if}}
+  <figcaption class="drizzle-u-textSmaller">
+    <ul class="drizzle-u-listUnstyled">
+      {{#if label}}<li>{{label}}</li>{{/if}}
+      <li><code>{{color}}</code></li>
+      {{#if property}}<li><code>{{property}}</code></li>{{/if}}
+    </ul>
   </figcaption>
 </figure>
