--- a/src/pages/demos/demo-example-1.hbs
+++ b/src/pages/demos/demo-example-1.hbs
@@ -15,7 +15,7 @@ styles:
   <article>
     <header>
       <h2>{{title}}</h2>
-      <p>Published: <time pubdate="pubdate">{{date}}</time></p>
+      <p>Published: <time pubdate="pubdate">{{timestamp date format="MMM Do, YYYY"}}</time></p>
     </header>
     <p>{{{body}}}</p>
   </article>
