Remove wrapping <p> tag

--- a/src/pages/demos/demo-example-1.hbs
+++ b/src/pages/demos/demo-example-1.hbs
@@ -17,6 +17,6 @@ styles:
       <h2>{{title}}</h2>
       <p>Published: <time pubdate="pubdate">{{timestamp date format="MMM Do, YYYY"}}</time></p>
     </header>
-    <p>{{{body}}}</p>
+    {{{body}}}
   </article>
 {{/each}}
