--- a/src/templates/default.hbs
+++ b/src/templates/default.hbs
@@ -1,20 +1,20 @@
-{{#extend "blank" htmlclass="drizzle-Layout"}}
+{{#extend "blank" htmlclass="drizzle-Layout" bodyclass="drizzle-Layout-body"}}
   {{#content "head" mode="append"}}
     <link rel="stylesheet" href="{{baseurl}}/assets/drizzle/styles/drizzle.css">
     <link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/toolkit.css">
   {{/content}}
   {{#content "wrapper"}}
-    <body class="drizzle-Layout-body">
-      {{> drizzle.nav}}
-      <div class="drizzle-Layout-main drizzle-u-cf">
-        <div class="drizzle-u-pad drizzle-u-rhythm">
-          {{#block "body"}}
+    {{> drizzle.nav}}
+    <div class="drizzle-Layout-main drizzle-u-cf">
+      <div class="drizzle-u-pad drizzle-u-rhythm">
+        {{#block "body"}}
 
-          {{/block}}
-        </div>
+        {{/block}}
       </div>
+    </div>
+    {{#content "footer"}}
       <script src="{{baseurl}}/assets/drizzle/scripts/drizzle.js"></script>
       <script src="{{baseurl}}/assets/toolkit/scripts/toolkit.js"></script>
-    </body>
+    {{/content}}
   {{/content}}
 {{/extend}}
