Change 'footer' to 'foot'

--- a/src/templates/default.hbs
+++ b/src/templates/default.hbs
@@ -13,7 +13,7 @@
       </div>
     </div>
   {{/content}}
-  {{#content "footer"}}
+  {{#content "foot"}}
     <script src="{{baseurl}}/assets/drizzle/scripts/drizzle.js"></script>
     <script src="{{baseurl}}/assets/toolkit/scripts/toolkit.js"></script>
   {{/content}}
