--- a/src/templates/drizzle/page-item.hbs
+++ b/src/templates/drizzle/page-item.hbs
@@ -1,16 +1,14 @@
 <div class="drizzle-Item">
   <div class="drizzle-Grid drizzle-Grid--withGutter">
-    <div class="drizzle-Grid-cell drizzle-u-md-size1of3">
+    <div class="drizzle-Grid-cell drizzle-u-marginBottom drizzle-u-md-size1of3">
       <div class="drizzle-FrameThumb" data-drizzle-append-iframe="./{{@key}}.html" aria-hidden="true">
         <a href="./{{@key}}.html"></a>
       </div>
     </div>
     <div class="drizzle-Grid-cell drizzle-u-md-size2of3">
-      <div class="drizzle-u-marginEnds">
-        {{#> drizzle.labelheader tag="h4" labels=data.labels}}
-          <a href="./{{@key}}.html">{{data.title}}</a>
-        {{/drizzle.labelheader}}
-      </div>
+      {{#> drizzle.labelheader tag="h4" labels=data.labels}}
+        <a href="./{{@key}}.html">{{data.title}}</a>
+      {{/drizzle.labelheader}}
       {{#if data.notes}}
         <div class="drizzle-Item-notes drizzle-u-rhythm">
           {{{data.notes}}}
