--- a/src/templates/drizzle/labelheader.hbs
+++ b/src/templates/drizzle/labelheader.hbs
@@ -11,7 +11,8 @@
 {{#if labels}}
   <ul class="
     drizzle-u-inlineBlock
-    drizzle-u-alignMiddle">
+    drizzle-u-alignMiddle
+    drizzle-u-noPadLeft">
     {{#each labels as |label|}}
       <li class="drizzle-Label drizzle-Label--{{label}}">
         {{label}}
