Add u-listUnstyled per PR feedback

--- a/src/templates/drizzle/labelheader.hbs
+++ b/src/templates/drizzle/labelheader.hbs
@@ -12,7 +12,7 @@
   <ul class="
     drizzle-u-inlineBlock
     drizzle-u-alignMiddle
-    drizzle-u-noPadLeft">
+    drizzle-u-listUnstyled">
     {{#each labels as |label|}}
       <li class="drizzle-Label drizzle-Label--{{label}}">
         {{label}}
