Update templates to use 'body' and 'main'

--- a/src/templates/blank.hbs
+++ b/src/templates/blank.hbs
@@ -17,8 +17,8 @@
     {{/block}}
   </head>
   <body class="{{bodyclass}}">
-    {{#block "wrapper"}}
-      {{#block "body"}}
+    {{#block "body"}}
+      {{#block "main"}}
 
       {{/block}}
     {{/block}}
