--- a/src/templates/collection.hbs
+++ b/src/templates/collection.hbs
@@ -1,5 +1,5 @@
 {{#extend "default"}}
-  {{#content "body"}}
+  {{#content "main"}}
     <h1>{{name}}</h1>
     {{#each patterns}}
       {{> drizzle.item}}
