--- a/src/templates/default.hbs
+++ b/src/templates/default.hbs
@@ -3,11 +3,11 @@
     <link rel="stylesheet" href="{{baseurl}}/assets/drizzle/styles/drizzle.css">
     <link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/toolkit.css">
   {{/content}}
-  {{#content "wrapper"}}
+  {{#content "body"}}
     {{> drizzle.nav}}
     <div class="drizzle-Layout-main drizzle-u-cf">
       <div class="drizzle-u-pad drizzle-u-rhythm">
-        {{#block "body"}}
+        {{#block "main"}}
 
         {{/block}}
       </div>
