Update index page templates to use new pages helper

--- a/src/pages/demos/index.hbs
+++ b/src/pages/demos/index.hbs
@@ -6,8 +6,6 @@ title: Demos
 
 <p>These are some demos.</p>
 
-{{#each drizzle.pages.demos}}
-  {{#compare @key "!==" "index"}}
-    {{> drizzle.page-item }}
-  {{/compare}}
+{{#each (pages "demos" ignore="index")}}
+  {{> drizzle.page-item }}
 {{/each}}
