--- a/src/pages/docs/index.hbs
+++ b/src/pages/docs/index.hbs
@@ -5,9 +5,9 @@ title: Documentation
 <p>These are some docs.</p>
 
 <ul>
-  {{#each drizzle.pages.docs}}
-    {{#compare @key "!==" "index"}}
-      <li><a href="./{{@key}}.html">{{data.title}}</a></li>
-    {{/compare}}
+  {{#each (pages "docs" ignore="index")}}
+    <li>
+      <a href="{{baseurl}}/{{url}}">{{data.title}}</a>
+    </li>
   {{/each}}
 </ul>
