Updated various templates to use new data helper

--- a/src/pages/demos/demo-example-2.hbs
+++ b/src/pages/demos/demo-example-2.hbs
@@ -10,7 +10,7 @@ styles:
 
 <p>Data below courtesy of <a href="http://www.radfaces.com">Rad Faces</a>.</p>
 <ul>
-  {{#each drizzle.data.radfaces.contents}}
+  {{#each (data "radfaces")}}
     <li>{{first_name}} {{last_name}} from {{location}}</li>
   {{/each}}
 </ul>
