--- a/src/patterns/typography/headings.hbs
+++ b/src/patterns/typography/headings.hbs
@@ -9,7 +9,7 @@ labels:
 previewClass: drizzle-u-rhythm
 ---
 
-{{#with drizzle.data.specimens.contents}}
+{{#with (data "specimens")}}
   <h1>{{heading}}</h1>
   <h2>{{heading}}</h2>
   <h3>{{heading}}</h3>
