--- a/src/patterns/typography/misc.hbs
+++ b/src/patterns/typography/misc.hbs
@@ -5,7 +5,7 @@ notes: |
   These are some misc elements.
 ---
 
-{{#with drizzle.data.specimens.contents}}
+{{#with (data "specimens")}}
   {{punctuation}}<br>
   {{characters}}<br>
   {{math}}<br>
