--- a/src/patterns/typography/paragraphs.hbs
+++ b/src/patterns/typography/paragraphs.hbs
@@ -9,5 +9,5 @@ labels:
 
 {{!-- TODO: maybe a helper or something to shorten this path? --}}
 <p>
-  {{drizzle.data.specimens.contents.paragraph}}
+  {{data "specimens.paragraph"}}
 </p>
