--- a/src/pages/demos/demo-example-1.hbs
+++ b/src/pages/demos/demo-example-1.hbs
@@ -11,7 +11,7 @@ styles:
 
 <h1>{{title}}</h1>
 
-{{#each drizzle.data.articles.contents}}
+{{#each (data "articles")}}
   <article>
     <header>
       <h2>{{title}}</h2>
