--- a/src/templates/drizzle/nav.hbs
+++ b/src/templates/drizzle/nav.hbs
@@ -6,7 +6,7 @@
 
 <div class="drizzle-Layout-nav drizzle-Nav" id="nav">
   <div class="drizzle-Nav-header">
-    <a href="{{baseurl}}/">
+    <a href="{{@root.baseurl}}/">
       {{> drizzle.logo}}
     </a>
     <a class="drizzle-Nav-header-toggle" href="#nav">
