--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -13,16 +13,16 @@ title: Overview
 
 <h3>Sections</h3>
 <dl>
-  <dt><a href="/patterns/typography.html">Typography</a></dt>
+  <dt><a href="{{@root.baseurl}}/patterns/typography.html">Typography</a></dt>
   <dd class="drizzle-u-padBottom">
     Examples of foundational typographic elements like headings, paragraphs
     and lists.
   </dd>
-  <dt><a href="/docs">Docs</a></dt>
+  <dt><a href="{{@root.baseurl}}/docs">Docs</a></dt>
   <dd class="drizzle-u-padBottom">
     General documentation of naming conventions and template usage.
   </dd>
-  <dt><a href="/demos">Demos</a></dt>
+  <dt><a href="{{@root.baseurl}}/demos">Demos</a></dt>
   <dd class="drizzle-u-padBottom">
     A collection of mockups, demonstrations, proofs-of-concept or
     anything else that might not be production-ready.
