Add more default CSS imports

--- a/src/assets/toolkit/styles/toolkit.css
+++ b/src/assets/toolkit/styles/toolkit.css
@@ -4,6 +4,8 @@
 
 @import "suitcss-base";
 @import "suitcss-components-button";
+@import "suitcss-components-grid";
 @import "./base/index.css";
 
+@import "suitcss-utils";
 /* Import more stuff here. */
