Add notes to demo and docs index pages

--- a/src/pages/demos/index.hbs
+++ b/src/pages/demos/index.hbs
@@ -1,5 +1,8 @@
 ---
 title: Demos
+notes: |
+  A collection of mockups, demonstrations, proofs-of-concept or
+  anything else that might not be production-ready.
 ---
 
 <h1>Demos</h1>
