--- a/src/pages/docs/index.hbs
+++ b/src/pages/docs/index.hbs
@@ -1,5 +1,7 @@
 ---
 title: Documentation
+notes: |
+  General documentation of naming conventions and template usage
 ---
 
 <p>These are some docs.</p>
