Reorganize patterns and navigation template
This adds new patterns and also reworks the organization of the Drizzle
nav template, making use of sorting.

--- a/src/patterns/components/button/disabled.hbs
+++ b/src/patterns/components/button/disabled.hbs
@@ -10,7 +10,7 @@ labels:
   - deprecated
 ---
 
-{{#embed "patterns.button.base" disabled=true}}
+{{#embed "patterns.components.button.base" disabled=true}}
   {{#content "content"}}
     Disabled Button
   {{/content}}
