--- a/src/patterns/components/button/primary.hbs
+++ b/src/patterns/components/button/primary.hbs
@@ -11,7 +11,7 @@ labels:
   - approved
 ---
 
-{{#embed "patterns.button.base" class="Button--primary"}}
+{{#embed "patterns.components.button.base" class="Button--primary"}}
   {{#content "content"}}
     Primary Button
   {{/content}}
