use helper class for text align center

--- a/src/pages/demos/demo-example-2.hbs
+++ b/src/pages/demos/demo-example-2.hbs
@@ -6,7 +6,7 @@ styles:
   - demo-2
   - toolkit
 ---
-<div class="container">
+<div class="container u-textCenter">
   <header>
     <h1>{{title}}</h1>
     <p>Data below courtesy of <a href="http://www.radfaces.com">Rad Faces</a>.</p>
